# mrcpp

./: .#MWTree.h  .clang-format  .codecov.yml  .coveralls.yml  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS  AdditionCalculator.h  AnalyticAdaptor.h  BandWidth.h  BandWidthAdaptor.h  BoundingBox.cpp  BoundingBox.h  BoysFunction.h  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ConvolutionOperator.cpp  ConvolutionOperator.h  CopyAdaptor.h  CrossCorrelation.cpp  CrossCorrelationCalculator.cpp  CrossCorrelationCalculator.h  CrossCorrelationGenerator.h  DefaultCalculator.h  FilterCache.cpp  FilterCache.h  FunctionNode.cpp  FunctionNode.h  FunctionTree.cpp  FunctionTree.h  FunctionTreeVector.h  GaussExp.cpp  GaussExp.h  GaussFunc.cpp  GaussFunc.h  GaussPoly.cpp  (+97 more)
api/: CMakeLists.txt  Gaussians  MWFunctions  MWOperators  Parallel  Plotter  Printer  Timer  constants.h  macros.h  mrcpp_declarations.h
doc/snippets/: CMakeLists.txt
examples/: CMakeLists.txt  addition.cpp  derivative.cpp  mpi_matrix.cpp  mpi_send_tree.cpp  mpi_shared_tree.cpp  multiplication.cpp  pbc.cpp  pbc.h  poisson.cpp  projection.cpp  scf.cpp  schrodinger_semigroup1d.cpp  tree_cleaner.cpp
include/: AdditionCalculator.h  AnalyticFunction.h  CMakeLists.txt  CrossCorrelation.h  DefaultCalculator.h  DerivativeCalculator.h  DerivativeConvolution.h  DerivativeKernel.h  GenNode.h  HydrogenicFunction.h  InterpolatingBasis.h  MWNode.h  WaveletAdaptor.h  apply.h  constants.h  eigen_disable_warnings.h  macros.h  mrcpp_declarations.h  parallel_mpi.h
include/MRCPP/: Gaussians  MWFunctions  Plotter
mwbuilders/: AdditionCalculator.h  AnalyticAdaptor.h  BandWidthAdaptor.h  CMakeLists.txt  ConvolutionCalculator.cpp  ConvolutionCalculator.h  CopyAdaptor.h  CrossCorrelationCalculator.cpp  CrossCorrelationGenerator.h  DefaultCalculator.h  DerivativeCalculator.cpp  DerivativeCalculator.h  DerivativeGenerator.h  FiniteDifferenceOperator.cpp  FiniteDifferenceOperator.h  GridCleaner.cpp  GridCleaner.h  GridGenerator.h  HarrisonDerivative.h  HarrisonDerivativeCalculator.h  MWAdder.h  MWConvolution.h  MWDerivative.h  MWFDCalculator.h  MWFDOperator.h  MWMultiplier.h  MWOperator.cpp  MWOperator.h  MWProjector.h  MultiplicationCalculator.h  NumDiffCalculator.cpp  NumDiffCalculator.h  OperApplicationCalculator.cpp  OperApplicationCalculator.h  OperatorAdaptor.h  OperatorApplier.h  ProjectionCalculator.cpp  ProjectionCalculator.h  TreeAdaptor.h  TreeBuilder.cpp  (+4 more)
mwcore/: CMakeLists.txt  CrossCorrelation.h  CrossCorrelationCache.h  FilterCache.h  GaussQuadrature.h  InterpolatingBasis.cpp  InterpolatingBasis.h  LegendreBasis.cpp  LegendreBasis.h  MWFilter.h  ObjectCache.h  QuadratureCache.h  ScalingBasis.h  ScalingCache.h
mwoperators/: ABGVCalculator.cpp  ABGVCalculator.h  ABGVOperator.h  CMakeLists.txt  ConvolutionOperator.cpp  ConvolutionOperator.h  DerivativeCalculator.cpp  DerivativeCalculator.h  DerivativeConvolution.h  DerivativeGenerator.h  DerivativeKernel.h  DerivativeOperator.cpp  DerivativeOperator.h  FiniteDifferenceOperator.cpp  HarrisonDerivativeCalculator.cpp  HelmholtzKernel.h  HelmholtzOperator.h  IdentityConvolution.h  IdentityKernel.h  IdentityOperator.h  MWFDCalculator.cpp  MWFDCalculator.h  MWFDOperator.cpp  MWFDOperator.h  MWOperator.cpp  MWOperator.h  NumDiffOperator.h  PHCalculator.cpp  PHCalculator.h  PHOperator.h  PoissonKernel.h  PoissonOperator.h
mwtrees/: CMakeLists.txt  FunctionNode.cpp  FunctionNode.h  FunctionTree.cpp  FunctionTree.h  FunctionTreeVector.h  GenNode.cpp  GenNode.h  MWNode.cpp  MWNode.h  MWTree.cpp  MWTree.h  OperatorNode.cpp  OperatorNode.h  OperatorTree.cpp  OperatorTree.h  OperatorTreeVector.h  ProjectedNode.cpp  ProjectedNode.h  SerialFunctionTree.cpp  SerialFunctionTree.h  SerialOperatorTree.cpp  SerialOperatorTree.h  SerialTree.cpp  SerialTree.h
pilot/: CMakeLists.txt  Gauss_1D.cpp  Gauss_3D.cpp  One_electron_only_V_implementation.cpp  P_inverse_r.cpp  README  Single_electron.cpp  Two_electrons.cpp  V_phi.cpp  ZORA_Scalar.cpp  ZORA_utilities.h  mrchem.cpp.sample  mrchem.inp  mrcpp.cpp  mrcpp.cpp.sample  my_utilities.h
pymrcpp/: CMakeLists.txt  PyAnalyticFunction.h  PyBoundingBox.cpp  PyBoundingBox.h  PyFunctionTree.cpp  PyFunctionTree.h  PyRepresentableFunction.h  pyBases.cpp  pyFundamentalTypes.cpp  pyGauss.cpp  pyMethods.cpp  pyOperators.cpp  pyProject.cpp  pyProject.h  pyTmpEverything.cpp  pymrcpp.cpp  test_pymrcpp3d.py  test_python.py
share/: CMakeLists.txt  generate_filters_sources.cpp
share/mwfilters/: I_G0_0  I_G0_14  I_G0_17  I_G0_18  I_G0_20  I_G0_25  I_G0_26  I_G0_29  I_G0_3  I_G0_32  I_G0_40  I_G0_41  I_G0_5  I_H0_1  I_H0_12  I_H0_13  I_H0_14  I_H0_23  I_H0_30  I_H0_35  I_H0_36  I_H0_37  I_H0_8  I_H0_9  I_MultiWaveletFilters_0.txt  I_MultiWaveletFilters_1.txt  I_MultiWaveletFilters_11.txt  I_MultiWaveletFilters_14.txt  I_MultiWaveletFilters_15.txt  I_MultiWaveletFilters_16.txt  I_MultiWaveletFilters_2.txt  I_MultiWaveletFilters_3.txt  I_MultiWaveletFilters_7.txt  I_MultiWaveletFilters_9.txt  I_b-spline-deriv1.txt  I_b-spline-deriv2.txt  I_b-spline-deriv3.txt  I_c_left_10  I_c_left_14  I_c_left_20  (+91 more)
src/: ABGVCalculator.cpp  ABGVCalculator.h  ABGVOperator.cpp  ABGVOperator.h  AdditionCalculator.h  AnalyticAdaptor.h  AnalyticFunction.h  BandWidth.cpp  BandWidth.h  BandWidthAdaptor.h  BoundingBox.cpp  BoundingBox.h  BoysFunction.cpp  BoysFunction.h  CMakeLists.txt  ConvolutionCalculator.cpp  ConvolutionCalculator.h  ConvolutionOperator.cpp  ConvolutionOperator.h  CopyAdaptor.cpp  CopyAdaptor.h  CrossCorrelation.cpp  CrossCorrelationCache.cpp  CrossCorrelationCalculator.cpp  CrossCorrelationCalculator.h  DefaultCalculator.h  DerivativeCalculator.cpp  DerivativeConvolution.h  DerivativeKernel.h  FilterCache.cpp  FunctionNode.cpp  FunctionNode.h  FunctionTree.cpp  FunctionTree.h  FunctionTreeVector.cpp  FunctionTreeVector.h  GaussExp.cpp  GaussExp.h  GaussFunc.cpp  GaussFunc.h  (+120 more)
src/MRCPP/: MRA  MWFunctions  MWOperators  Parallel  Printer
src/coefficients/: CMakeLists.txt  (+175 more)
tests/: CMakeLists.txt  factory_functions.h  unit_tests.cpp
(+846 files in other folders)
